Rename folder and no site label for pymol

--- a/prep_pymol_script.ipynb
+++ b/prep_pymol_script.ipynb
@@ -249,15 +249,15 @@
     "    pmlScript.append(\"reset\")\n",
     "    pmlScript.append(pmlSetView)\n",
     "    # For the site's label\n",
-    "    label = \" or \".join([f\"c. {c} and i. {i} and n. CA\" for _, c, i in sites.itertuples()])\n",
-    "    pmlScript.extend([\n",
-    "        \"set label_position,(5,7,100)\",\n",
-    "#             \"set label_size, 10\",\n",
-    "        \"set label_connector, true\",\n",
-    "        \"set label_bg_color, white\",\n",
-    "        \"set label_bg_transparency, 0.2\",\n",
-    "        f\"label {label}, resi\\n\"\n",
-    "    ])\n",
+    "    # label = \" or \".join([f\"c. {c} and i. {i} and n. CA\" for _, c, i in sites.itertuples()])\n",
+    "    # pmlScript.extend([\n",
+    "    #     \"set label_position,(5,7,100)\",\n",
+    "    #     \"set label_size, 10\",\n",
+    "    #     \"set label_connector, true\",\n",
+    "    #     \"set label_bg_color, white\",\n",
+    "    #     \"set label_bg_transparency, 0.2\",\n",
+    "    #     f\"label {label}, resi\\n\"\n",
+    "    # ])\n",
     "\n",
     "with open(PYMOL_SCRIPT_FILE, 'w') as f:\n",
     "    f.write(\"; \".join(pmlScript))\n"
