--- a/plot_result_comparison.ipynb
+++ b/plot_result_comparison.ipynb
@@ -161,9 +161,9 @@
     "    set_colors=(TYPE_COLORS[\"paraFix\"], TYPE_COLORS[\"hyphy\"]),\n",
     "    alpha = 0.4\n",
     ")\n",
+    "plt.savefig(VENN_PLOT, bbox_inches=\"tight\")\n",
     "plt.gca().set_facecolor('white')\n",
     "plt.gca().set_axis_on()\n",
-    "plt.savefig(VENN_PLOT, bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "plt.close()\n"
    ]
@@ -280,8 +280,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f29f8e832b8e444338a9384744ec6701cf48888df329f7cb673095b3a6e4adc7"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('cov_paraFix')",
    "language": "python",
    "name": "python3"
   },
