--- a/plot_mutation_num.ipynb
+++ b/plot_mutation_num.ipynb
@@ -6,17 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
+    "import os\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.dates import DateFormatter\n",
     "\n",
     "PROTEIN_NAME = \"Spike\"\n",
+    "OUTPUT_DIR = \"output\"\n",
     "\n",
-    "BACKGROUND_NUM_FILE = \"output/background_num.csv\"\n",
-    "MUTATION_NUM_FILE = \"output/mutation_num_Spike.csv\"\n",
-    "PARAFIXSITES_FILE = \"output/nextstrain_sitePath_results.csv\"\n",
+    "BACKGROUND_NUM_FILE = os.path.join(OUTPUT_DIR, \"background_num.csv\")\n",
+    "MUTATION_NUM_FILE = os.path.join(OUTPUT_DIR, \"mutation_num_Spike.csv\")\n",
+    "PARAFIXSITES_FILE = os.path.join(OUTPUT_DIR, \"nextstrain_sitePath_results.csv\")\n",
+    "HYPHY_RES_FILE = os.path.join(OUTPUT_DIR, \"nextstrain_hyphy_results.csv\")\n",
     "\n",
     "FIRST_DATE_PLOT = \"plots/first_date.pdf\"\n",
     "\n",
@@ -51,6 +53,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hyphy_sites = pd.read_csv(HYPHY_RES_FILE)\n",
+    "hyphy_sites = hyphy_sites[hyphy_sites[\"protein\"] == PROTEIN_NAME]\n",
+    "hyphy_sites[\"date\"] = pd.to_datetime(hyphy_sites[\"date\"])\n",
+    "hyphy_sites[\"positive_selection\"] = hyphy_sites[\"p-value\"] < 0.1\n",
+    "hyphy_sites = hyphy_sites.rename(columns={\"site\": \"aaPos\"})\n",
+    "hyphy_sites = hyphy_sites[hyphy_sites[\"aaPos\"].isin(SITES_TO_PLOT.unstack().unique())]\n",
+    "hyphy_sites = hyphy_sites[hyphy_sites[\"positive_selection\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bg_num = pd.read_csv(BACKGROUND_NUM_FILE)\n",
     "bg_num[\"Date\"] = pd.to_datetime(bg_num[\"Date\"])\n",
     "bg_num = bg_num.groupby(\"Date\").sum().reset_index()\n",
@@ -62,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,9 +119,15 @@
     "        ax = axes[i][j]\n",
     "        ax.fill_between(bg_num[\"Date\"], 0, bg_num[\"Total_num\"], label = \"Backgroup\", facecolor='#AFDAE8')\n",
     "        ax.fill_between(site_num[\"Date\"], 0, site_num[\"Mut_num\"], label = \"mutation\", facecolor='#F7E15F')\n",
+    "        # ax.fill_between(site_num[\"Date\"], 0, site_num[\"Mut_num\"], label = \"mutation\", facecolor='red')\n",
     "\n",
     "        first_date = paraFix_sites.loc[paraFix_sites[\"aaPos\"] == site_name, \"date\"].min()\n",
     "        ax.axvline(x=first_date, color=\"red\")\n",
+    "        # ax.axvline(x=first_date, color=\"gold\")\n",
+    "\n",
+    "        # res_dates = hyphy_sites.loc[hyphy_sites[\"aaPos\"] == site_name, \"date\"]\n",
+    "        # if len(res_dates.index):\n",
+    "        #     ax.axvline(x=res_dates.min(), color=\"teal\")\n",
     "\n",
     "        ax.tick_params(axis='x', labelrotation=60)\n",
     "        ax.set_xlim([x_pos[1], x_pos[-1]])\n",
