--- a/parse_hyphy.ipynb
+++ b/parse_hyphy.ipynb
@@ -141,11 +141,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f29f8e832b8e444338a9384744ec6701cf48888df329f7cb673095b3a6e4adc7"
-  },
   "kernelspec": {
-   "display_name": "R",
+   "display_name": "Python 3.10.6 ('ncov_paraFix')",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +156,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0782a864aefaca93f0f0309b74fa11b76506441e071cb36f3ed536798b26ba82"
+   }
   }
  },
  "nbformat": 4,
