--- a/plot_mutation_num.ipynb
+++ b/plot_mutation_num.ipynb
@@ -143,11 +143,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f29f8e832b8e444338a9384744ec6701cf48888df329f7cb673095b3a6e4adc7"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('cov_paraFix')",
+   "display_name": "Python 3.10.6 ('ncov_paraFix')",
    "language": "python",
    "name": "python3"
   },
@@ -161,9 +158,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0782a864aefaca93f0f0309b74fa11b76506441e071cb36f3ed536798b26ba82"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
